# F4Epurity

./: .gitignore  .readthedocs.yaml  11-L3-03N_valves_clipped.csv  MANIFEST.in  README.md  activities.json  activity_data.json  cfg_test.yaml  coordinates.txt  mcnp_source.txt  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  improve_documentation.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml
docs/source/: conf.py  examples.rst  index.rst  input_parameters.rst  installation.rst  introduction.rst  license.rst  requirements.txt  troubleshooting.rst  usage.rst
src/f4epurity/: collapse.py  decay_chain_calc.py  dose.py  global_activity_map.py  global_effective_xs_map.py  main.py  maintenance.py  mcnp_source_calc.py  parsing.py  psource.py  reaction_rate.py  shielding_estimator.py  stl_plot.py  utilities.py
src/f4epurity/resources/: NIST_tabulated.xlsx  workstations.xlsx  ~$F4E_dosematrix.xlsx
src/f4epurity/resources/building_stl_files/: B11-11-L3-01.stl  in_bio.stl  lower_pipe_chase.stl  nb_cell.stl
tests/: test_CLI.py  test_collapse.py  test_decay_chain_calc.py  test_dose.py  test_maintenance.py  test_parsing.py  test_psource.py  test_reaction_rate.py  test_regression.py  test_shielding_estimator.py  test_utilities.py
tests/data/: Decay2020.json  SA2_d1s  d1s_time_correction_SA2  my_irrad_scenario.txt
tests/data/cli/: cfg_test.json  cfg_test.yaml  flux.vtu  sources1.csv  sources2.csv  sources3.csv
tests/data/regression/: 11-L3-03N_valves_clipped.csv
(+12 files in other folders)
